src/components/Editor/SearchBar.css
.search-bar {
  display: flex;
  flex-direction: column;
}

.search-bottom-bar {
  display: flex;
  justify-content: space-between;
  width: calc(100% - 1px);
  height: 40px;
  background-color: var(--theme-body-background);
  border-bottom: 1px solid var(--theme-splitter-color);
  padding: 0 13px;
}

.search-bottom-bar .search-modifiers {
  display: flex;
  align-items: center;
}

.search-bottom-bar .search-modifiers button {
  padding: 0 3px;
  margin: 0 3px;
  border: none;
  background: none;
  width: 20px;
  height: 20px;
  border-radius: 3px;
}

.search-bottom-bar .search-modifiers button i {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  width: 16px;
}

.search-bottom-bar .search-modifiers button svg {
  fill: var(--theme-comment);
}

.search-bottom-bar .search-modifiers button.active {
  background-color: var(--theme-selection-background);
}

.search-bottom-bar .search-modifiers button.active svg {
  fill: white;
}

.search-bottom-bar .search-type-toggles {
  display: flex;
  align-items: center;
}

.search-bottom-bar .search-type-toggles h1 {
  color: var(--theme-comment);
  font-size: 12px;
  margin: 0;
}

.search-bottom-bar .search-type-toggles .search-type-btn {
  margin: 0 6px;
  border: none;
  background: transparent;
  color: var(--theme-comment-alt);
}

.search-bottom-bar .search-type-toggles .search-type-btn.active {
  color: var(--theme-selection-background);
  font-weight: bold;
}

.search-bar .result-list li:first-child {
  border-top: none;
}

.search-bar .result-list li {
  border: none;
  color: var(--theme-comment);
  border-top: 1px solid var(--theme-splitter-color);
  border-bottom: 1px solid var(--theme-splitter-color);
  background-color: var(--theme-tab-toolbar-background);
  padding: 4px;
  margin: 0;
  display: flex;
}

.search-bar .result-list li.selected,
.search-bar .result-list li.selected .subtitle {
  color: var(--theme-body-background);
  background-color: var(--theme-selection-background);
}

.search-bar .result-list li .title {
  font-weight: bold;
  flex-grow: 2;
  flex-basis: 95%;
}

.search-bar .result-list li .subtitle {
  font-weight: lighter;
  flex-grow: 1;
  flex-basis: 5%;
}

